infrastructure/modules/vpc/main.tf
# VPC Module

locals {
  name = "${var.project_name}-${var.environment}"
  common_tags = {
    Environment = "${var.environment}"
    CreatedBy = "Terraform"
  }
}

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support = true
  tags = merge(local.common_tags,{Name = "${local.name}-vpc"})
}

# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = merge(local.common_tags,{Name = "${local.name}-igw"})
}

# Public Subnets
resource "aws_subnet" "public_subnets" {
  count = length(var.public_subnets) 
  vpc_id = aws_vpc.main.id
  cidr_block = var.public_subnets[count.index]
  map_customer_owned_ip_on_launch = true
  availability_zone = var.azs[count.index]
  tags = merge(local.common_tags,{Name = "${local.name}-public-subnet-${count.index + 1}"})

}

# Private Subnets
resource "aws_subnet" "private_subnets" {
  count = length(var.private_subnets)   
  vpc_id = aws_vpc.main.id
  cidr_block = var.private_subnets[count.index]
  availability_zone = var.azs[count.index]
  map_customer_owned_ip_on_launch = true
  tags = merge(local.common_tags,{Name = "${local.name}-private-subnet-${count.index + 1}"})  
}

# Elastic IP for NAT Gateway
resource "aws_eip" "nat" {
  domain = vpc
  depends_on = [ aws_internet_gateway.igw ]
 tags = merge(local.common_tags,{Name = "${local.name}-nat-ip"})
}

# NAT Gateway
resource "aws_nat_gateway" "nat_gatway" {
  subnet_id = aws_subnet.public_subnets[0].id
  allocation_id = aws_eip.nat.id
  tags = merge(local.common_tags,{Name = "${local.name}-nat-gatway"})
}

#Public Route Table
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
   tags = merge(local.common_tags,{Name = "${local.name}-public_rt"})
}

#Private Route Table
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.main.id
  route = {
   cidr_block = "0.0.0.0/0"
   nat_gatway_id = aws_nat_gateway.nat_gatway.id
  }
 tags = merge(local.common_tags,{Name = "${local.name}-private_rt"})
}

# Route Table Associations
resource "aws_route_table_association" "public" {
  count = length(var.public_subnets)  
  route_table_id = aws_route_table.public_route_table.id
  subnet_id = var.public_subnets[count.index].id
}

resource "aws_route_table_association" "private" {
  count = length(var.private_subnets)
  route_table_id = aws_subnet.private_subnets.id
  subnet_id = var.private_subnets[count.index].id
}


resource "aws_flow_log" "vpc_flow_logs" {
  iam_role_arn = aws_iam_role.vpc_flow_logs_role.id
  log_destination = aws_cloudwatch_log_group.vpc_flow_logs_cloudwatch.arn
  traffic_type = "ALL"
  vpc_id = aws_vpc.main.id
}


resource "aws_cloudwatch_log_group" "vpc_flow_logs_cloudwatch" {
  name = "aws/vpc/${local.name}-flow-logs"
  retention_in_days = 30
   tags = merge(local.common_tags,{Name = "${local.name}-vpc-flow-logs"})
}




# IAM Role for VPC Flow Logs
resource "aws_iam_role" "vpc_flow_logs_role" {
  name = "${loacl.name}-vpc-flow-log-role"
  assume_role_policy = jsondecode({
    Version = "2012-10-17"
    Statement = [
        {
            Action: "sts:AssumeRole"
            Effect = "Allow"
            Principal = {
                Service = "vpc-flow-logs.amazonaws.com"
            }
        }
    ]
  })
}


# IAM Role Policy for VPC Flow Logs
resource "aws_iam_role_policy" "vp_flow_log_policy" {
   name = "${loacl.name}-vpc-flow-log-policy"
   role = aws_iam_role.vpc_flow_logs_role.id
    policy = jsonencode({
        Version = "2012-10-17"
        Statement = [
            {
                Effect = "Allow"
                Action = [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:DescribeLogGroups",
                    "logs:DescribeLogStreams"
                ]
                resource = "*"
            }
        ]
    })
}
